k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api
spec:
  type: LoadBalancer
  selector:
    app: titanic-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
